apicast-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T14:45:02Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: apicast-live-dev
    namespace: apicast-dev
    resourceVersion: "276965984"
    uid: 89e65c53-0a3c-4d72-9efa-6e2df4b21689
  subsets:
  - notReadyAddresses:
    - ip: 10.131.22.108
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: apicast-live-dev-1-gn2xb
        namespace: apicast-dev
        resourceVersion: "276965981"
        uid: 0cea1a6d-5991-4724-91ea-3dbc9cda3ee6
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-25T14:45:02Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: apicast-staging-dev
    namespace: apicast-dev
    resourceVersion: "466147360"
    uid: 934192c2-a7f3-4ade-83f0-af5e1d051f32
  subsets:
  - addresses:
    - ip: 10.131.22.109
      nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
      targetRef:
        kind: Pod
        name: apicast-staging-dev-1-m7nk6
        namespace: apicast-dev
        resourceVersion: "466147357"
        uid: 21a105ab-1819-498f-bb02-a7d629d1e5fb
    ports:
    - name: management
      port: 8090
      protocol: TCP
    - name: proxy
      port: 8080
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
