apicast-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.108
    conditions:
      ready: false
      serving: false
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: apicast-live-dev-1-gn2xb
      namespace: apicast-dev
      resourceVersion: "276965981"
      uid: 0cea1a6d-5991-4724-91ea-3dbc9cda3ee6
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    generateName: apicast-live-dev-
    generation: 53
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-live-dev
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: apicast-live-dev-2m6gt
    namespace: apicast-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-live-dev
      uid: b20c4f72-1424-4bd3-8965-39e0ec31cd72
    resourceVersion: "276965983"
    uid: b3cc8c50-a0ad-4434-9f43-68fc28beae96
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.131.22.109
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-prod-brazilsouth3-vmmxw
    targetRef:
      kind: Pod
      name: apicast-staging-dev-1-m7nk6
      namespace: apicast-dev
      resourceVersion: "466147357"
      uid: 21a105ab-1819-498f-bb02-a7d629d1e5fb
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    generateName: apicast-staging-dev-
    generation: 36
    labels:
      app: 3scale-gateway
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: apicast-staging-dev
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: apicast-staging-dev-cglr4
    namespace: apicast-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: apicast-staging-dev
      uid: 899a1d8c-5a97-4e1f-981c-edce59837b0b
    resourceVersion: "466147359"
    uid: ceb77ffe-fdd9-45d4-bcba-58924811e70e
  ports:
  - name: proxy
    port: 8080
    protocol: TCP
  - name: management
    port: 8090
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
