apicast-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: libroremuneraciones-live
    namespace: apicast-dev
    resourceVersion: "22607474"
    uid: a87a011e-c9e1-4c69-b9af-ac0b4d6f7042
  spec:
    host: libroremuneraciones-live-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:28:01Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones-live-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: libroremuneraciones-stagging
    namespace: apicast-dev
    resourceVersion: "22607608"
    uid: 917ae3ce-ad78-44a5-8775-509732fc4111
  spec:
    host: libroremuneraciones-stagging-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:28:14Z"
        status: "True"
        type: Admitted
      host: libroremuneraciones-stagging-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: lre-proxy-live
    namespace: apicast-dev
    resourceVersion: "22607741"
    uid: 5bc24ae5-e42d-4988-85ae-48b902ab6362
  spec:
    host: lre-proxy-live-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:28:27Z"
        status: "True"
        type: Admitted
      host: lre-proxy-live-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: lre-proxy-stagging
    namespace: apicast-dev
    resourceVersion: "22607882"
    uid: d602610e-93d8-4def-be89-733b57944499
  spec:
    host: lre-proxy-stagging-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:28:44Z"
        status: "True"
        type: Admitted
      host: lre-proxy-stagging-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: lre-services-live
    namespace: apicast-dev
    resourceVersion: "22608027"
    uid: 126a8499-8a23-48c5-8a6c-1dfea4c83c2b
  spec:
    host: lre-services-live-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
        MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIHAzCCBeugAwIBAgIRAOFJjF2X3t8Io3XrgnCs7ckwDQYJKoZIhvcNAQELBQAw
[...]
        K/BoiKHmiPhYw9gbMIYl7qELU5BehE8=
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEpAIBAAKCAQEAyRZv6nUtOGBmALfAVtdmMQb5Jm51rc7CP7t0cw2peCwig1xC
[...]
        wq1nwN4xIyvJqfeVidr8Usc+jUzv86g1JNd129WSVsWILhL9h5u7xA==
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-live-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:28:59Z"
        status: "True"
        type: Admitted
      host: lre-services-live-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T14:45:03Z"
    labels:
      app: 3scale-gateway
      migration.openshift.io/migrated-by-migmigration: 5007d33d-caaf-467b-b9cc-65a18caf3d1c
      migration.openshift.io/migrated-by-migplan: f921392c-1b4c-4dd1-9fd7-bfec352bc628
      velero.io/backup-name: migration-b31dc-initial-dfwm9
      velero.io/restore-name: migration-b31dc-final-vttsb
    name: lre-services-stagging
    namespace: apicast-dev
    resourceVersion: "22608198"
    uid: d9142120-32df-4de6-9af4-98f4c5b7cd51
  spec:
    host: lre-services-stagging-dev.api.dirtrab.cl
    port:
      targetPort: proxy
    tls:
      caCertificate: |
        -----BEGIN CERTIFICATE-----
        MIIDXzCCAkegAwIBAgILBAAAAAABIVhTCKIwDQYJKoZIhvcNAQELBQAwTDEgMB4G
[...]
        WD9f
        -----END CERTIFICATE-----
        -----BEGIN CERTIFICATE-----
        MIIETjCCAzagAwIBAgINAe5fIh38YjvUMzqFVzANBgkqhkiG9w0BAQsFADBMMSAw
[...]
        SPY=
        -----END CERTIFICATE-----
      certificate: |
        -----BEGIN CERTIFICATE-----
        MIIGiTCCBXGgAwIBAgIMO/kL2JHu1wkkZkJ8MA0GCSqGSIb3DQEBCwUAMFAxCzAJ
[...]
        -----END CERTIFICATE-----
      key: |
        -----BEGIN RSA PRIVATE KEY-----
        MIIEowIBAAKCAQEApQA//Tsi+IKER8ob0Quoxo6O3uRvxowvoKGQyPOtlQjwhflB
[...]
        Qys11HH/yTPB+PSqk/LbnUIZ1l41c6AfMSczBpJccZ3d1fj1gFkL
        -----END RSA PRIVATE KEY-----
      termination: edge
    to:
      kind: Service
      name: apicast-staging-dev
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:29:19Z"
        status: "True"
        type: Admitted
      host: lre-services-stagging-dev.api.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
